Added ChatTranscript support

--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -3,3 +3,15 @@ $secondary-brand-color: #78be20;
 $bar-font-color: #fff;
 $small-size: 700px;
 $big-size: 1360px;
+
+$color-light-blue: #003399;
+$color-lighter-blue: #0099cc;
+$color-good: #91ce06;
+$color-best: #006633;
+$color-bad: #d52b1e;
+$color-yellow: #f9e300;
+$color-light-grey: #999999;
+$color-grey: #666666;
+$color-dark-grey: #333333;
+$color-hotpink: #C83586;
+$color-purple: #4F247E;
