--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,14 @@
           box-sizing: border-box;
 }
 
+*[hidden] {
+  display: none !important;
+}
+
+.hidden {
+  display: none !important;
+}
+
 body {
   font-family: 'Montserrat', sans-serif;
   background: lightgrey;
@@ -310,6 +318,64 @@ header .navitems.open li:hover:not(.disabled) a {
   }
 }
 
+.ChatTranscripts .msg {
+  width: 75%;
+  margin-top: 3rem;
+}
+
+.ChatTranscripts .msg-card {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: .25rem;
+}
+
+.ChatTranscripts .msg-card .card-header {
+  padding: 0.5rem;
+  border-radius: .25rem .25rem 0 0;
+}
+
+.ChatTranscripts .msg-card .card-footer {
+  padding: 0.5rem;
+  background-color: #999999;
+  border-radius: 0 0 .25rem .25rem;
+}
+
+.ChatTranscripts .msg-card .card-body {
+  padding: 1rem;
+  background-color: #fff;
+}
+
+.ChatTranscripts .msg-card .card-body .button-segment {
+  margin-top: 0.25rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.ChatTranscripts .msg-card .card-body button {
+  background-color: #0099cc;
+  padding: 0.25rem;
+  margin: .1rem;
+  width: 34%;
+  color: #fff;
+}
+
+.ChatTranscripts .msg-card.bot .card-header {
+  background-color: #333333;
+  color: #fff;
+}
+
+.ChatTranscripts .msg-card.agent .card-header {
+  background-color: #141b4d;
+  color: #fff;
+}
+
+.ChatTranscripts .msg-card.customer .card-header {
+  background-color: #78be20;
+  color: #fff;
+}
+
 .container {
   margin: 1rem;
   display: -webkit-box;
@@ -335,6 +401,12 @@ header .navitems.open li:hover:not(.disabled) a {
             flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+  }
+  .container.ChatTranscripts {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   queue-card {
     -ms-flex-preferred-size: 34%;
