--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-@import 'variables', 'reset', 'header';
+@import 'variables', 'reset', 'header', 'msg';
 
 
 
@@ -9,12 +9,19 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+
+
 }
+
 
 @media only screen and (min-width: $small-size) {
     .container {
         flex-direction: row;
         flex-wrap: wrap;
+
+        &.ChatTranscripts {
+            flex-direction: column;
+        }
     }
     queue-card {
         flex-basis: 34%;
@@ -26,5 +33,3 @@
         flex-basis: 25%;
     }
 }
-
-  
