--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -19,7 +19,7 @@
         flex-direction: row;
         flex-wrap: wrap;
 
-        &.ChatTranscripts {
+        &.ChatTranscript {
             flex-direction: column;
         }
     }
