--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -24,7 +24,7 @@
                     <li class="wide"><a href="/">Nordic</a></li>
                     <li><a href="/denmark">Denmark</a></li>
                     <li class="disabled"><a href="#">Finland</a></li>
-                    <li class="disabled"><a href="#">Norway</a></li>
+                    <li><a href="/norway">Norway</a></li>
                     <li><a href="/sweden">Sweden</a></li>
                     <li><a href="/helpdesk">Helpdesk</a></li>
                     <li><a href="/kitchen">Kitchen&Interior</a></li>
