--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -23,7 +23,7 @@
                 <ul>
                     <li class="wide"><a href="/">Nordic</a></li>
                     <li><a href="/denmark">Denmark</a></li>
-                    <li class="disabled"><a href="#">Finland</a></li>
+                    <li><a href="/finland">Finland</a></li>
                     <li><a href="/norway">Norway</a></li>
                     <li><a href="/sweden">Sweden</a></li>
                     <li><a href="/helpdesk">Helpdesk</a></li>
