--- a/views/reporttest.ejs
+++ b/views/reporttest.ejs
@@ -1,17 +1,18 @@
 <div class="container">
-    <script type='text/javascript' src='https://analytics.elkjop.com/javascripts/api/viz_v1.js'>
-    </script>
-    <div class='tableauPlaceholder' style='width: 1600px; height: 927px;'>
-        <object class='tableauViz' width='1600' height='927' style='display:none;'>
+    
+    <script type='text/javascript' src='https://analytics.elkjop.com/javascripts/api/viz_v1.js'></script>
+    <div class='tableauPlaceholder' style='width: 420px; height: 677px;'>
+        <object class='tableauViz' width='420' height='677' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fanalytics.elkjop.com%2F' /> 
             <param name='embed_code_version' value='3' /> 
             <param name='site_root' value='&#47;t&#47;CCC' />
-            <param name='name' value='CCCHoN_PublicNew&#47;HoNDashboard' />
+            <param name='name' value='CCCHoN_PublicNew&#47;HoNoverview' />
             <param name='tabs' value='no' />
-            <param name='toolbar' value='yes' />
-            <param name='showAppBanner' value='false' />
+            <param name='toolbar' value='no' />
+            <param name='showAppBanner' value='true' />
         </object>
     </div>
+
 </div>
 
 <script>
