--- a/views/reporttest.ejs
+++ b/views/reporttest.ejs
@@ -1,6 +1,15 @@
-<div class="container">
-    
-    <script type='text/javascript' src='https://analytics.elkjop.com/javascripts/api/viz_v1.js'></script>
+<div class="splitcontainer">
+
+    <div class="container">
+        <summary-card name="Denmark" id="dk" icon="grid" showLoader="true"></summary-card>
+        <summary-card name="Finland" id="fi" icon="grid"></summary-card>
+        <summary-card name="Norway" id="no" icon="grid"></summary-card>
+        <summary-card name="Sweden" id="se" icon="grid"></summary-card>
+        <summary-card name="Helpdesk" id="thd" icon="grid"></summary-card>
+        <summary-card name="Kitchen" id="ki" icon="grid"></summary-card>
+
+    </div>
+
     <div class='tableauPlaceholder' style='width: 420px; height: 677px;'>
         <object class='tableauViz' width='420' height='677' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fanalytics.elkjop.com%2F' /> 
@@ -13,7 +22,10 @@
         </object>
     </div>
 
+
 </div>
+
+
 
 <script>
     let key = 'nordic'
