--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script defer type='text/javascript' src='https://analytics.elkjop.com/javascripts/api/viz_v1.js'></script>
+    <script type='text/javascript' src='https://analytics.elkjop.com/javascripts/api/viz_v1.js'></script>
     <script defer src="/js/script.js"></script>
     <title>DASHBOARD</title>
 </head>
