--- a/views/reporttest.ejs
+++ b/views/reporttest.ejs
@@ -9,24 +9,25 @@
         <summary-card name="Kitchen" id="ki" icon="grid"></summary-card>
 
     </div>
+    
+    
 
-    <div class='tableauPlaceholder' style='width: 420px; height: 677px;'>
-        <object class='tableauViz' width='420' height='677' style='display:none;'>
+    <div class='tableauPlaceholder' style='width: 420px; height: 680px;'>
+        <object class='tableauViz' width='420' height='650' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fanalytics.elkjop.com%2F' /> 
             <param name='embed_code_version' value='3' /> 
             <param name='site_root' value='&#47;t&#47;CCC' />
             <param name='name' value='CCCHoN_PublicNew&#47;HoNoverview' />
             <param name='tabs' value='no' />
             <param name='toolbar' value='no' />
-            <param name='showAppBanner' value='true' />
+            <param name='showAppBanner' value='false' />
+            <param name='tooltip' value='no'/>
         </object>
     </div>
-
-
 </div>
 
 
-
+<script id="kindly-chat" src="https://chat.kindlycdn.com/kindly-chat.js" data-bot-key="49359f26-44ed-4703-b301-b169a224955c" data-shadow-dom async></script>
 <script>
     let key = 'nordic'
 </script>
