--- a/public/css/card.scss
+++ b/public/css/card.scss
@@ -115,6 +115,9 @@
             color: $secondary-brand-color;
             cursor: pointer;
         }
+        h2 {
+            font-size: 1.3rem;
+        }
 
     }
     .card-main {
@@ -223,22 +226,22 @@
                 flex-basis: 100%;
             }*/
             h1 {
-                font-size: 3rem;
-            }
-            h2 {
                 font-size: 2rem;
             }
-            h3 {
+            h2 {
                 font-size: 1.5rem;
             }
-            h4 {
+            h3 {
                 font-size: 1rem;
             }
-            h5 {
+            h4 {
                 font-size: 0.7rem;
             }
-            h6 {
+            h5 {
                 font-size: 0.6rem;
+            }
+            h6 {
+                font-size: 0.5rem;
             }
             .sla {
                 display: flex;
@@ -338,9 +341,11 @@
 
 
 @media only screen and (min-width: $small-size) {
+
+
     .card {
         width: 300px;
-        height: 300px;
+        height: 299px;
         grid-template-columns: auto;
         grid-template-rows: 1fr 5fr 0.7fr;
         grid-template-areas: 
@@ -405,7 +410,30 @@
                 }
             }
         }
+        .card-summary {
+            h1 {
+                font-size: 3rem;
+            }
+            h2 {
+                font-size: 2rem;
+            }
+            h3 {
+                font-size: 1.5rem;
+            }
+            h4 {
+                font-size: 1rem;
+            }
+            h5 {
+                font-size: 0.7rem;
+            }
+            h6 {
+                font-size: 0.6rem;
+            }
+        }
+        .card-header {
+            h2 {
+                font-size: 1.5rem;
+            }
+        }
     }
-
-    
 }
