--- a/views/reporttest.ejs
+++ b/views/reporttest.ejs
@@ -21,7 +21,7 @@
             <param name='tabs' value='no' />
             <param name='toolbar' value='no' />
             <param name='showAppBanner' value='false' />
-            <param name='tooltip' value='no'/>
+            <param name='tooltip' value='yes'/>
         </object>
     </div>
 </div>
