--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -4,7 +4,7 @@
 
 .splitcontainer {
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 3fr 2fr;
     
 
     .tableauPlaceholder {
@@ -52,5 +52,8 @@
 @media only screen and (min-width: $big-size) {
     queue-card {
         flex-basis: 25%;
+    }
+    .splitcontainer summary-card {
+        flex-basis: 33%;
     }
 }
