--- a/views/unit.ejs
+++ b/views/unit.ejs
@@ -17,8 +17,21 @@
     <% } %>
     
 
+
+    
+
+</div>
+<div id="site-nav" class='hidden'>
+    <div class="circle">
+        <ion-icon name="arrow-back-outline" id='site-picker'></ion-icon>
+    </div>
+    <div class="menu">
+        <button key='49359f26-44ed-4703-b301-b169a224955c'>CPH</button>
+        <button key='72a50932-2f24-4454-8d78-95f714e95d8c'>OSL</button>
+    </div>
 </div>
 
 <script>
     let key = '<%= pageTitle %>'
+    let site = '<%= site %>'
 </script>
