--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -1,5 +1,6 @@
 $brand-color: #141b4d;
 $secondary-brand-color: #78be20;
+$pop-brand-color: #333333;
 $bar-font-color: #fff;
 $small-size: 700px;
 $big-size: 1360px;
