--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1,6 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 @import 'variables', 'reset', 'header', 'msg';
 
+footer {
+    position: fixed;
+    display: flex;
+    bottom: 0;
+    left: 0;
+    height: 2.5rem;
+    width: 0.7rem;
+    z-index: 2;
+    transition: all 500ms ease-in-out;
+    overflow: hidden;
+    justify-content: space-evenly;
+    align-items: center;
+    color: $pop-brand-color;
+
+    &:hover {
+        width: 100%;
+        div {
+            color: $bar-font-color;
+            display: block;
+        }
+    }
+
+    &.clicked {
+        width: 100%;
+        div {
+            display: block;
+            color: $bar-font-color;
+        }
+    }
+    
+    &.loggedin {
+        background-color: $pop-brand-color;
+    }
+    div {
+        display: none;
+        text-align: left;
+        vertical-align: middle;
+        font-size: 0.8rem;
+        margin: 0.7rem;
+        ion-icon {
+            font-size: 1rem;
+        }
+        a {
+            color: $bar-font-color;
+        }
+    }
+}
 
 .splitcontainer {
     display: grid;
@@ -130,6 +177,13 @@
     }
     queue-card {
         flex-basis: 34%;
+    }
+    footer {
+        width: 100%;
+        div {
+            display: block;
+            color: $bar-font-color;
+        }
     }
 }
 
