--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -165,6 +165,119 @@ footer {
 
 }
 
+.schedule-container {
+    width: 100%;
+    min-height: 4rem;
+    margin: 0.5rem;
+    margin-bottom: 0;
+    display: flex;
+    justify-content: flex-start;
+    border-bottom: 1px dashed grey;
+    padding: 1rem;
+    &:first-child {
+        padding-bottom: 0;
+    }
+
+    .padding {
+        width: 2rem;
+    }
+    ion-icon {
+        width: 1rem;
+        visibility: hidden;
+        margin: auto 1rem auto 0;
+        &.active {
+            visibility: visible;
+            color: $brand-color;
+            path {
+                fill: $secondary-brand-color;
+            }
+        }
+    }
+    &:hover ion-icon {
+        visibility: visible;
+    }
+
+    .name {
+        width: 150px;
+        margin: auto;
+        display: flex;
+
+    }
+
+    .shift {
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(1020, 1fr);
+
+        .time-label {
+            font-size: 0.7rem;
+            margin-top: auto;
+            border-left: 1px solid grey;
+            padding-left: 0.1rem
+        }
+        .block {
+            padding: 0.5rem;
+            text-align: center;
+            max-height: 4rem;
+            position: relative;
+            display: grid;
+
+            &.active {
+                border: 3px solid cyan !important;
+                span {
+                    font-size: 1rem;
+                }
+            }
+
+            &:first-child {
+                border-bottom-left-radius: 0.2rem;
+                border-top-left-radius: 0.2rem;
+            }
+            &:last-child {
+                border-bottom-right-radius: 0.2rem;
+                border-top-right-radius: 0.2rem;
+            }
+            
+            span {
+                font-size: 0.8rem;
+                overflow: clip;
+                white-space: nowrap;
+                &.activity-name {
+                    font-weight: bold;
+                }
+            }
+            > span {
+                visibility: hidden;
+            }
+  
+            /* Tooltip text */
+            .tooltiptext {
+                visibility: hidden;
+                width: 120px;
+                background-color: black;
+                color: #fff;
+                text-align: center;
+                padding: 5px 0;
+                border-radius: 6px;
+                bottom: 100%;
+                left: 50%;
+                margin-left: -60px;
+                /* Position the tooltip text - see examples below! */
+                position: absolute;
+                z-index: 1;
+                span {
+                    white-space: unset;
+                }
+            }
+            
+            /* Show the tooltip text when you mouse over the tooltip container */
+            &:hover .tooltiptext {
+                visibility: visible;
+            }
+        }
+    }
+}
+
 
 @media only screen and (min-width: $small-size) {
     .container {
@@ -173,6 +286,11 @@ footer {
 
         &.ChatTranscript {
             flex-direction: column;
+        }
+
+        &.schedule-overview {
+            flex-direction: column;
+            margin-bottom: 2rem;
         }
     }
     queue-card {
@@ -184,6 +302,15 @@ footer {
             display: block;
             color: $bar-font-color;
         }
+    }
+    .schedule-container .shift .block {
+        > span {
+            visibility: visible;
+        }
+        &.extra-small > span {
+            visibility: hidden;
+        }
+
     }
 }
 
