Added page variable

--- a/views/reporttest.ejs
+++ b/views/reporttest.ejs
@@ -30,4 +30,5 @@
 <!--<script id="kindly-chat" src="https://chat.kindlycdn.com/kindly-chat.js" data-bot-key="49359f26-44ed-4703-b301-b169a224955c" data-shadow-dom async></script>-->
 <script>
     let key = 'nordic'
+    let page = key
 </script>
