--- a/views/singleCard.ejs
+++ b/views/singleCard.ejs
@@ -6,6 +6,7 @@
 
 <script>
     let key = '<%= key %>';
+    let page = key;
     document.querySelector('header').className ='hidden';
     document.querySelector('body').classList.add('tableau');
 </script>
